# IMPACT

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
docker/: entrypoint.sh
experiments/: CMakeLists.txt  visual_utils.py
experiments/allegro/: CMakeLists.txt  allegro_impact_single.cpp
experiments/box/: CMakeLists.txt  box_impact_multiple.cpp  box_impact_single.cpp  box_pushing.cpp  box_pushing.h  box_relaxation.cpp  box_visual.py  penalty_ipopt.cpp
experiments/cart_transporter/: CMakeLists.txt  cart_transporter.cpp  cart_transporter.h  cart_transporter_impact_multiple.cpp  cart_transporter_impact_single.cpp  cart_transporter_penalty.cpp  cart_transporter_relaxation.cpp  cart_transporter_visual.py
experiments/push_circle/: CMakeLists.txt  push_circle.cpp  push_circle.h  push_circle_impact_multiple.cpp  push_circle_impact_single.cpp  push_circle_visual.py
experiments/push_t/: CMakeLists.txt  push_t.cpp  push_t.h  push_t_impact_multiple.cpp  push_t_impact_single.cpp  push_t_penalty.cpp  push_t_relaxation.cpp  push_t_visual.py
experiments/toy_mpcc/: CMakeLists.txt  toy_mpcc.cpp
impact_solver/: CMakeLists.txt
impact_solver/include/impact/: aula_subproblem.h  bcd_aula_config.h  bcd_aula_solver.h  complementarity_projection.h  dual_block.h  gauss_newton_solver.h  lcp_problem.h  lcp_stage.h  mpcc_stage.h  mpcc_subproblem.h  multiple_shooting.h  problem.h  saddle_layout.h  single_shooting.h  stage_problem.h
impact_solver/src/: aula_subproblem.cpp  bcd_aula_solver.cpp  gauss_newton_solver.cpp  lcp_stage.cpp  mpcc_stage.cpp  mpcc_subproblem.cpp  multiple_shooting.cpp  single_shooting.cpp
impact_solver/tests/: CMakeLists.txt  cross_combo.cpp  parity_ms.cpp  test_components.cpp
penalty_solver/: CMakeLists.txt
penalty_solver/include/penalty_solver/: allegro_lcp_penalty_solver.h  allegro_lcp_problem.h  lcp_penalty_solver.h  mpcc_penalty_solver.h
penalty_solver/src/: allegro_lcp_penalty_solver.cpp  allegro_lcp_problem.cpp  lcp_penalty_solver.cpp  mpcc_penalty_solver.cpp
relax_solver/: CMakeLists.txt
relax_solver/include/relaxation_solver/: mpcc_relaxation_solver.h
relax_solver/src/: mpcc_relaxation_solver.cpp
simulation/: CMakeLists.txt  allegro_simulator.cpp  allegro_simulator.h  contactLCP.cpp  contactLCP.h  fingertips_simulator.cpp  fingertips_simulator.h  mj_simulator.cpp  mj_simulator.h  rotation_utils.h  test_viewer.cpp
